<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="viewModel"
      type="org.oppia.android.app.profile.AdminAuthViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/admin_auth_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/addProfileBackground">

    <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/admin_auth_app_bar_layout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <androidx.appcompat.widget.Toolbar
        android:id="@+id/admin_auth_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:fontFamily="sans-serif"
        android:minHeight="?attr/actionBarSize"
        app:navigationContentDescription="@string/admin_auth_close"
        app:navigationIcon="@drawable/ic_close_white_24dp"
        app:title="@string/admin_auth_toolbar"
        app:titleTextAppearance="@style/ToolbarTextAppearance"
        app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/admin_auth_app_bar_layout">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
          android:id="@+id/admin_auth_heading_textview"
          style="@style/Heading2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="28dp"
          android:layout_marginTop="40dp"
          android:layout_marginEnd="28dp"
          android:maxLines="2"
          android:text="@string/admin_auth_heading"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <TextView
          android:id="@+id/admin_auth_sub_text"
          style="@style/Subtitle1"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="28dp"
          android:layout_marginTop="12dp"
          android:layout_marginEnd="28dp"
          android:text="@string/admin_auth_sub"
          android:textColor="@color/oppiaAdminAuthSecondaryText"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/admin_auth_heading_textview" />

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/admin_auth_input_pin"
          style="@style/TextInputLayout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="28dp"
          android:layout_marginTop="48dp"
          android:layout_marginEnd="28dp"
          android:hint="@string/admin_auth_pin"
          app:errorMessage="@{viewModel.errorMessage}"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/admin_auth_sub_text">

          <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/admin_auth_input_pin_edit_text"
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="numberPassword"
            android:maxLength="5"
            app:textChangedListener="@{viewModel.inputPinTextWatcher}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
          android:id="@+id/admin_auth_submit_button"
          style="@style/StateButtonActive"
          android:layout_marginTop="48dp"
          android:layout_marginEnd="28dp"
          android:layout_marginBottom="44dp"
          android:background="@{viewModel.isSubmitButtonActive ? @drawable/state_button_primary_background :@drawable/start_button_transparent_background}"
          android:enabled="@{viewModel.isSubmitButtonActive}"
          android:minHeight="48dp"
          android:text="@string/admin_auth_submit"
          android:textColor="@{viewModel.isSubmitButtonActive ? @color/white : @color/submitButtonInactiveText }"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="1.0"
          app:layout_constraintStart_toStartOf="@+id/admin_auth_sub_text"
          app:layout_constraintTop_toBottomOf="@id/admin_auth_input_pin"
          app:layout_constraintVertical_bias="0.0" />
      </androidx.constraintlayout.widget.ConstraintLayout>

      <View
        android:id="@+id/admin_auth_toolbar_shadow_view"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@drawable/toolbar_drop_shadow" />
    </FrameLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
