...
  <string name="profile_chooser_administrator_controls">Administrator Controls</string>
  <string name="profile_chooser_language">Language</string>
  <!-- AdminAuthActivity -->
  <string name="admin_auth_toolbar">Administrator Controls</string>
  <string name="admin_auth_heading">Administrator Authorization Required</string>
  <string name="admin_auth_sub">Enter the Administrator PIN in order to create a new account.</string>
  <string name="admin_auth_admin_controls_sub">Enter the Administrator PIN in order to access Administrator Controls.</string>
  <string name="admin_auth_pin">Administrator\'s PIN</string>
  <string name="admin_auth_incorrect">Incorrect Administrator PIN. Please try again.</string>
  <string name="admin_auth_submit">Submit</string>
  <string name="admin_auth_close">Close</string>
  <!-- AdminPinActivity -->
  <string name="admin_pin_requirement_description">Before we add profiles, we need to protect your account by creating a PIN. This gives you the ability to authorize downloads and manage profiles on the device.</string>
  <string name="admin_pin_pin_description">Do <b>not</b> use a PIN you have set for personal accounts like banking or social security.</string>
  <string name="admin_pin_new_pin">New 5-Digit PIN</string>
...
